[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "DongHunKim",email = "ddong3525@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery (>=5.5.3,<6.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
